--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
     <button class="btn btn-primary dropdown-toggle" type="button"  id="mydropdown" data-toggle="dropdown">Catagory
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item active" href="#">Random</a></li>
-      <li><a class="dropdown-item" href="#">Movie</a></li>
-      <li><a class="dropdown-item" href="#">Science</a></li>
+      <li class="dropdown-item "> <a href="#">Random</a></li>
+      <li class="dropdown-item "> <a href="#">Movie</a></li>
+      <li class="dropdown-item "> <a href="#">Science</a></li>
     </ul>
   </div>
 
@@ -53,7 +53,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <!--<script src="js/index.js"></script>-->
+        <!--<script src="js/index.js"></script>-->ra
 
 <script>
 
