updated to use axios

--- a/public/index.html
+++ b/public/index.html
@@ -69,123 +69,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <!--<script src="js/index.js"></script>-->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="js/index.js"></script>
 
-<script>
-        var catagory;
-
-        $(".dropdown-menu li a").click(function(){
-          $(this).parents(".dropdown").find('.btn').html($(this).text() + ' <span class="caret"></span>');
-        });
-
-       $('.dropdown-menu a').click(function(){
-         catagory = $('#catagory').text()
-         catagory = catagory.toLowerCase()
-         url = $('#url').text()
-         url = url.toLowerCase()
-
-          console.log(catagory, url)
-          //$('#mydropdown').text($(this).text() + ' <span class="caret"></span>');
-         });
-
-        function getQuote(quote, author, catagory, urlselected) {
-          var url, key;
-          if (catagory === undefined) {
-            catagory = ''
-          }
-          if (urlselected === undefined) {
-            urlselected = 'andruxnet'
-          }
-          console.log(catagory)
-          if (urlselected == "wanyang") {
-            url = 'https://amarlianna-wanyang-quote-v1.p.mashape.com/quote?wy=girl'
-            key = 'xs1xxb7veHmshLgTZiSJNBwc4U7rp1iKERhjsnYagDK7AGZBKE'
-          } else if (urlselected == "andruxnet") {
-            var url = 'https://andruxnet-random-famous-quotes.p.mashape.com/?cat=' + catagory;
-            key = 'b0imCVpzwJmshep20kRdIRnPj6VYp13vCytjsnlovm6pc8w6Dt'
-
-            // These code snippets use an open-source library. http://unirest.io/nodejs
-//unirest.post("https://andruxnet-random-famous-quotes.p.mashape.com/?cat=movies&count=10")
-//.header("X-Mashape-Key", "xs1xxb7veHmshLgTZiSJNBwc4U7rp1iKERhjsnYagDK7AGZBKE")
-//.header("Content-Type", "application/x-www-form-urlencoded")
-//.header("Accept", "application/json")
-//.end(function (result) {
-//  console.log(result.status, result.headers, result.body);
-//});
-
-
-
-// These code snippets use an open-source library. http://unirest.io/nodejs
-//unirest.post("https://amarlianna-wanyang-quote-v1.p.mashape.com/quote?wy=girl")
-//.header("X-Mashape-Key", "xs1xxb7veHmshLgTZiSJNBwc4U7rp1iKERhjsnYagDK7AGZBKE")
-//.header("Content-Type", "application/x-www-form-urlencoded")
-//.header("Accept", "application/json")
-//.send("quote=quote")
-//.end(function (result) {
-//  console.log(result.status, result.headers, result.body);
-//});
-          }
-
-
-
-
-
-          //var url = 'https://andruxnet-random-famous-quotes.p.mashape.com/?cat=' + catagory;
-          console.log(url, key);
-          $.ajax({
-            headers: {
-              'X-Mashape-Key': key,
-              'Accept': 'application/json',
-              'Content-Type': 'application/x-www-form-urlencoded'
-            },
-            url: url,
-            success: function(data) {
-              //console.dir(data[0])
-
-              //console.log(data[0])
-              //console.log(data[0].quote)
-              quote.html("<i class='fa fa-quote-left'> </i>" + " " + data[0].quote);
-              author.html(data[0].author);
-            }
-          });
-        }
-
-        function changeAll(change, quote, author, changeCSS) {
-          change.css('background', changeCSS);
-          getQuote(quote, author, catagory);
-          console.log(catagory)
-        }
-        $(document).ready(function() {
-          var i = 0;
-          var colors = [
-            //'#27ae60',
-            //'#2c3e50',
-            //'#16a085',
-            //'#e74c3c',
-            //'#9b59b6',
-            //'#342224',
-            //'#BDBB99',
-            //'#FB6964',
-            //"#C63D0F",
-            "#3B3738",
-            //"#005A31",
-            //'#472E32',
-            //"#558C89",
-            //"#f39c12",
-            //"#77b1a9"
-          ];
-          var change = $(".change");
-          var quote = $("#quote");
-          var author = $("#author");
-          //var catagory = $('#dropdown option:selected').name();
-          //var catagory = $('#dropdown').find(":selected").text();
-          //console.log("catagory is", catagory)
-
-          changeAll(change, quote, author, colors[(i++) % 15]);
-          $("#button").click(function() {
-            changeAll(change, quote, author, colors[(i++) % 15]);
-          });
-        });
 
 
 
